cet_find_library( BOOST_SERIALIZATION NAMES boost_serialization PATHS ENV BOOST_LIB NO_DEFAULT_PATH )
cet_find_library( BOOST_DATE_TIME     NAMES boost_date_time     PATHS ENV BOOST_LIB NO_DEFAULT_PATH )

add_subdirectory(AnalysisTree)
add_subdirectory(Calibration)
add_subdirectory(CRT)
add_subdirectory(DetectorSim)
add_subdirectory(Geo)
add_subdirectory(JobConfigurations)
add_subdirectory(LArSoftConfigurations)
add_subdirectory(MCTruthExtractor)
add_subdirectory(SBNDPandora)
add_subdirectory(SimulationFilters)
add_subdirectory(Utilities)

